--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <button onclick="mostrarSeccion('mamparas')">MAMPARAS</button>
       <button onclick="mostrarSeccion('pizarrones')">PIZARRONES</button>
     </nav>
-    <div class="fabricantes">soy victor </div>
+    <div class="fabricantes">SOMOS FABRICANTES</div>
   </header>
 
   <main class="main">
